fixed about.html not displaying the correct text colour on dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1066,6 +1066,9 @@ table {
 td, th {
   border: 1px solid #dddddd;
 }
+.about_edu_work_work_ex_p_2{
+  color: var(--nav-text-colour);
+}
 @media screen and (max-width: 700px){
   td, th {
     border: 1px solid #dddddd;
